welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: '(' expected but identifier found.
while j !=0 recule;
      ^Variables:7: error: illegal start of simple expression
while j !=0 recule;
                  ^